
==== Breaking changes

==== Bug fixes

- Accept charset in request's content type {pull}677[677].
- Use type integer instead of number in JSON schemas where applicable {pull}641[641].
- Set array item types to string in JSON schemas {pull}651[651].
- Fix issue preventing server from being stopped {pull}704[704].
- Limit the amount of concurrent requests being processed{pull}731[731].

==== Added

- Enriched data with IP and UserAgent {pull}393[393], {pull}701[701], {pull}730[730].
- Push errors and transactions to different ES indices {pull}706[706].
- Allow custom `error.log.level` {pull}712[712].
- Change `concurrent_request` default from 40 to 5 {pull}731[731].
- Change `max_unzipped_size` default from 50mb to 30mb {pull}731[731].
- Change `read_timeout` and `write_timeout` defaults from 2s to 30s {pull}748[748], {pull}752[752].
- Limit number of new connections to accept simultaneously {pull}751[751].
- Push spans to separate ES index {pull}774[774].
- Update Go to 1.9.4 {pull}786[786].
- Adjust in-memory queue defaults {pull}791[791].
- Listen on unix domain socket with `host=unix:/path` {pull}768[768].
- Make timestamp optional in the intake api {pull}819[819].


==== Deprecated

==== Known Issues




=== APM Server version 6.2
https://github.com/elastic/apm-server/compare/71df0d96445df35afe27f38bcf734a0828e0761d\...4daa36bd5c144cf9182afc62dc8042af663756c6[View commits]

==== Breaking changes
- Renaming and reverse boolean `in_app` to `library_frame` {pull}385[385].
- Renaming `app` to `service` {pull}377[377]
- Move `trace.transaction_id` to `transaction.id` {pull}345[345], {pull}347[347], {pull}371[371]
- Renaming `trace` to `span` {pull}352[352].
- Renaming and reverse boolean `exception.uncaught` to `exception.handled` {pull}434[434].
- Move process related fields to their own namespace {pull}445[445].
- Rename Kibana directories according to changed structure in beats framework. {pull}454[454]